--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.0",
+    "@tauri-apps/cli": "^1.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.27.1",
